fix scrollbar on window

--- a/Day_03/css/style.css
+++ b/Day_03/css/style.css
@@ -24,6 +24,8 @@ a {
 }
 
 .wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
     background-color: var(--background-color);
 }
 
@@ -475,12 +477,14 @@ li {
 }
 
 .review .review-card-wrap::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
+    width: 8px;
+    height: 8px;
+
 }
 
 .review .review-card-wrap::-webkit-scrollbar-thumb {
     background-color: gray;
+    border-radius: 10px;
 }
 
 
